[Feat] 파비콘 추가

--- a/src/main/resources/templates/home/yes.html
+++ b/src/main/resources/templates/home/yes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow - 대시보드</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" th:href="@{/icon.png}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/home/yeshome.css}">
 
 </head>
@@ -26,7 +27,6 @@
     </div>
 
     <div class="tasks-grid">
-        <!-- 파일 확장자 과제 -->
         <div class="task-card">
             <div class="task-icon">📁</div>
             <div class="status-badge status-new">과제</div>
