--- a/src/main/resources/templates/homework/homework.html
+++ b/src/main/resources/templates/homework/homework.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>파일 확장자 분석기</title>
+    <link rel="icon" th:href="@{/icon.png}" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
     <link rel="stylesheet" th:href="@{/css/homework/homework.css}">
 </head>
 <body>
