[Fix] yes.html, homework.html 문구 개선

--- a/src/main/resources/templates/home/no.html
+++ b/src/main/resources/templates/home/no.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flow - 로그인</title>
+    <title>파일 확장자 차단 과제</title>
     <link rel="icon" th:href="@{/icon.png}" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/home/nohome.css}">
