--- a/src/main/resources/templates/home/yes.html
+++ b/src/main/resources/templates/home/yes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flow - 대시보드</title>
+    <title>파일 확장자 차단 과제</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" th:href="@{/icon.png}" type="image/x-icon">
     <link rel="stylesheet" th:href="@{/css/home/yeshome.css}">
@@ -32,7 +32,7 @@
             <div class="status-badge status-new">과제</div>
             <h3 class="task-title">파일 확장자 차단 과제</h3>
             <p class="task-description">
-                과제 열심히 했습니다.
+                과제 열심히 했어요!!!!!!!!
             </p>
 
             <button class="task-btn" onclick="location.href='/homework'">
@@ -44,7 +44,7 @@
         <div class="task-card">
             <div class="task-icon">⚡</div>
             <div class="status-badge status-progress">API 명세서</div>
-            <h3 class="task-title">API 개발</h3>
+            <h3 class="task-title">API 명세서</h3>
             <p class="task-description">
                 Spring Boot 기반의 API 명세서
             </p>
