[Fix] 스웨거 요청 uri 변경

--- a/src/main/resources/templates/home/yes.html
+++ b/src/main/resources/templates/home/yes.html
@@ -48,7 +48,7 @@
             <p class="task-description">
                 Spring Boot 기반의 API 명세서
             </p>
-            <button class="task-btn" onclick="window.open('/swagger-ui/index.html', '_blank')">
+            <button class="task-btn" onclick="window.open('https://flow.madras.p-e.kr/swagger-ui/index.html', '_blank')">
                 API 문서 보기
             </button>
         </div>
